@@ -979,6 +979,7 @@ PHP 8.4 UPGRADE NOTES
   . IP_PORTRANGE_LOW (FreeBSD/NetBSD/OpenBSD only).
   . SOCK_NONBLOCK.
   . SOCK_CLOEXEC.
+  . SOCK_BINDTOIFINDEX.
 
 - Sodium:
   . SODIUM_CRYPTO_AEAD_AEGIS128L_KEYBYTES
